[gd_scene load_steps=10 format=2]

[ext_resource path="res://LevelEditor/LevelLoadDialog.gd" type="Script" id=1]
[ext_resource path="res://UI/black.theme" type="Theme" id=2]
[ext_resource path="res://Assets/Font/AtlantisInternational-jen0.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/GameIcons/PNG/White/2x/cross.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.294118, 0.294118, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "close_dialog"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("LevelLoaderPanel/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelLoaderPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelLoaderPanel/CancelButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "open_dialog"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("LevelLoaderPanel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelLoaderPanel/VBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelLoaderPanel/CancelButton:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="LevelEditorLevelLoadDialog" type="Control"]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLoaderPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -45.0
margin_right = 80.0
margin_bottom = 45.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelLoaderPanel"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseModeTitle" type="Label" parent="LevelLoaderPanel/VBoxContainer"]
margin_left = 45.0
margin_right = 114.0
margin_bottom = 16.0
mouse_filter = 0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "Choose Mode:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ButtonDesc" type="Label" parent="LevelLoaderPanel/VBoxContainer"]
margin_top = 26.0
margin_right = 160.0
margin_bottom = 47.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Load: Load a saved level and edit it
Export: Send level to Downloads folder on device"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ModeButtonContainer" type="HBoxContainer" parent="LevelLoaderPanel/VBoxContainer"]
margin_top = 57.0
margin_right = 160.0
margin_bottom = 90.0
size_flags_vertical = 3
alignment = 1

[node name="LoadButton" type="Button" parent="LevelLoaderPanel/VBoxContainer/ModeButtonContainer"]
margin_left = 23.0
margin_top = 5.0
margin_right = 78.0
margin_bottom = 28.0
rect_min_size = Vector2( 55, 0 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Load"

[node name="ExportButton" type="Button" parent="LevelLoaderPanel/VBoxContainer/ModeButtonContainer"]
margin_left = 82.0
margin_top = 5.0
margin_right = 137.0
margin_bottom = 28.0
rect_min_size = Vector2( 55, 0 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Export"

[node name="CancelButton" type="TextureButton" parent="LevelLoaderPanel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.5
margin_top = -75.0
margin_right = 157.5
margin_bottom = 240.0
rect_scale = Vector2( 0.5, 0.5 )
window_title = "Open a File"
mode = 0
access = 1
current_dir = "user://"
current_path = "user://"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close_dialog = SubResource( 4 )
anims/open_dialog = SubResource( 5 )

[connection signal="pressed" from="LevelLoaderPanel/VBoxContainer/ModeButtonContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="LevelLoaderPanel/VBoxContainer/ModeButtonContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="LevelLoaderPanel/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
